# gustaf

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  CONTRIBUTING.html  CONTRIBUTING.md  IntroCompositions.ipynb  LICENSE.txt  MANIFEST.in  README.md  details.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  python_api.html  references.html  search.html  searchindex.js  setup.cfg  setup.py  show_options.html
.doctrees/: CONTRIBUTING.doctree  details.doctree  environment.pickle  index.doctree  python_api.doctree  references.doctree  show_options.doctree
.doctrees/_generated/: gustaf.create.doctree  gustaf.create.edges.doctree  gustaf.create.edges.from_data.doctree  gustaf.create.edges.from_vertices.doctree  gustaf.create.faces.box.doctree  gustaf.create.faces.doctree  gustaf.create.faces.edges_as_quad.doctree  gustaf.create.faces.to_quad.doctree  gustaf.create.faces.to_simplex.doctree  gustaf.create.faces.vertex_normals.doctree  gustaf.create.vertices.doctree  gustaf.create.vertices.raster.doctree  gustaf.create.volumes.box.doctree  gustaf.create.volumes.doctree  gustaf.doctree  gustaf.edges.Edges.centers.doctree  gustaf.edges.Edges.const_edges.doctree  gustaf.edges.Edges.const_elements.doctree  gustaf.edges.Edges.dashed.doctree  gustaf.edges.Edges.doctree  gustaf.edges.Edges.edges.doctree  gustaf.edges.Edges.elements.doctree  gustaf.edges.Edges.kind.doctree  gustaf.edges.Edges.referenced_vertices.doctree  gustaf.edges.Edges.remove_unreferenced_vertices.doctree  gustaf.edges.Edges.shrink.doctree  gustaf.edges.Edges.single_edges.doctree  gustaf.edges.Edges.sorted_edges.doctree  gustaf.edges.Edges.to_vertices.doctree  gustaf.edges.Edges.unique_edges.doctree  gustaf.edges.Edges.update_edges.doctree  gustaf.edges.Edges.update_elements.doctree  gustaf.edges.Edges.whatami.doctree  gustaf.edges.EdgesShowOption.doctree  gustaf.edges.doctree  gustaf.faces.Faces.BC.doctree  gustaf.faces.Faces.const_edges.doctree  gustaf.faces.Faces.const_faces.doctree  gustaf.faces.Faces.dashed.doctree  gustaf.faces.Faces.doctree  (+180 more)
.github/: pull_request_template.md
.github/workflows/: build_and_upload_wheels.yml  deploy.yml  doc_test.yml  docs.yml  format.yml  test_examples.yml  tests.yml
_generated/: gustaf.create.edges.from_data.html  gustaf.create.edges.from_vertices.html  gustaf.create.edges.html  gustaf.create.faces.box.html  gustaf.create.faces.edges_as_quad.html  gustaf.create.faces.html  gustaf.create.faces.to_quad.html  gustaf.create.faces.to_simplex.html  gustaf.create.faces.vertex_normals.html  gustaf.create.html  gustaf.create.vertices.html  gustaf.create.vertices.raster.html  gustaf.create.volumes.box.html  gustaf.create.volumes.html  gustaf.edges.Edges.centers.html  gustaf.edges.Edges.const_edges.html  gustaf.edges.Edges.const_elements.html  gustaf.edges.Edges.dashed.html  gustaf.edges.Edges.edges.html  gustaf.edges.Edges.elements.html  gustaf.edges.Edges.html  gustaf.edges.Edges.kind.html  gustaf.edges.Edges.referenced_vertices.html  gustaf.edges.Edges.remove_unreferenced_vertices.html  gustaf.edges.Edges.shrink.html  gustaf.edges.Edges.single_edges.html  gustaf.edges.Edges.sorted_edges.html  gustaf.edges.Edges.to_vertices.html  gustaf.edges.Edges.unique_edges.html  gustaf.edges.Edges.update_edges.html  gustaf.edges.Edges.update_elements.html  gustaf.edges.Edges.whatami.html  gustaf.edges.EdgesShowOption.html  gustaf.edges.html  gustaf.faces.Faces.BC.html  gustaf.faces.Faces.const_edges.html  gustaf.faces.Faces.const_faces.html  gustaf.faces.Faces.dashed.html  gustaf.faces.Faces.edges.html  gustaf.faces.Faces.faces.html  (+180 more)
_modules/: index.html
_modules/gustaf/: edges.html  faces.html  show.html  vertices.html  volumes.html
_sources/: details.rst.txt  index.rst.txt  references.rst.txt  show_options.rst.txt
_sources/_generated/: gustaf.create.edges.from_data.rst.txt  gustaf.create.edges.from_vertices.rst.txt  gustaf.create.edges.rst.txt  gustaf.create.faces.box.rst.txt  gustaf.create.faces.edges_as_quad.rst.txt  gustaf.create.faces.rst.txt  gustaf.create.faces.to_quad.rst.txt  gustaf.create.faces.to_simplex.rst.txt  gustaf.create.faces.vertex_normals.rst.txt  gustaf.create.rst.txt  (+210 more)
docs/: Makefile  requirements.txt
examples/: animations_for_iga_conference.py  calculate_algo.py  create_MS.py  create_basic_splines.py  create_block_mesh.py  create_boxes.py  create_tet_mesh.py  diagonalize.py  export_meshio.py  export_npz.py  extrusion.py  groups.py  hypermesh.py  iganets_bspline_surface.py  interac.py  load_sample_file.py  mixd_to_nutils.py  run_all_examples.py  run_all_examples.sh  run_all_examples_win.bat  show_basis.py  show_edges.py  show_faces.py  show_ffd.py  show_geometries.py  show_gmsh.py  show_gus.py  show_hmascii.py  show_logo.py  show_meshio_mesh.py  show_microstructures.py  show_multipatch.py  show_quads.py  show_scalarbar.py  show_scalarbar3d.py  show_splinedata.py  show_splines.py  show_subspline.py  show_tataratat.py  show_vertices.py  (+3 more)
gustaf/: __init__.py  _base.py  _typing.py  _version.py  edges.py  faces.py  ffd.py  meshmaker.py  segment.py  settings.py  show.py  spline.py  vertices.py  volumes.py
gustav/: __init__.py  _abstract_base.py  _base.py  _version.py  edges.py  faces.py  ffd.py  mesh.py  meshmaker.py  segment.py  settings.py  show.py  spline.py  version.py  vertices.py  volumes.py
tests/: common.py  conftest.py  test_basic_calls.py  test_concat.py  test_create.py  test_export.py  test_vertices_and_element_updates.py
(+130 files in other folders)
