[project]
name = "gustaf"
authors = [
    {name = "Jaewool Lee", email = "jaewooklee042@gmail.com"}
]
description = "Process and visualize numerical-analysis-geometries."
# fastapi uses hatling as build backend and it can use dynamic versioning
# poetry needs static versioning (version defined in pyproject.toml)
# setuptools (package itself) still uses the setup.py files, but as build
#  system supports dynamic versioning
keywords = [
    "numerical-analysis",
    "geometry",
    "visualization",
    "mesh",
]
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
all = [
    "vedo>=2023.4.3,<2023.5.0",
    "scipy",
    "meshio",
    "napf>=0.0.5",
    "funi>=0.0.1",
    "requests"
]
test = [
    "pytest",
    "pytest-cov",
    "funi",
    "napf",
]

[tool.setuptools]
packages = [
    "gustaf",
    "gustaf.io",
    "gustaf.utils",
    "gustaf.create",
    "gustaf.helpers"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "gustaf._version.version"}
readme = {file = "README.md"}

[tool.ruff]
line-length = 79
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "PL",          # pylint
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "NPY",         # numpy specific rules
  "I",           # isort specific rules
  "UP",          # pyupdate specific rules
  "C400","C401","C402","C403","C404","C405" # additional pyupgrade rules
]
fixable = ["ALL"]
target-version = "py37"
ignore = [
    "PLR2004", # TODO!
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "B904", # Within an `except` clause, raise exceptions with ...
    # "PLR0911", # Too many return statements
]

[tool.ruff.per-file-ignores]
"setup.py" = ["T201"]
"examples/*.py" = ["T201"]
"tests/*.py" = ["T201", "B018"]

[tool.codespell]
ignore-words-list = "connec"
skip="./docs/source/_generated/**,./docs/build/*,./build/*"
