[project]
name = "gustaf"
authors = [
    {name = "Jaewook Lee", email = "jaewooklee042@gmail.com"}
]
description = "Process and visualize numerical-analysis-geometries."
keywords = [
    "numerical-analysis",
    "geometry",
    "visualization",
    "mesh",
]
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "packaging",
]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
all = [
    "vedo>=2023.5.0",
    "scipy",
    "meshio",
    "napf>=0.0.5",
    "funi>=0.0.1",
    "requests",
    "ipywidgets",
    "k3d",
]
test = [
    "pytest",
    "funi>=0.0.1",
    "napf>=0.0.5",
]
dev = [
    "pytest",
    "funi",
    "napf",
    "vedo>=2023.5.0",
    "scipy",
    "meshio",
    "requests",
    "pre-commit",
    "ipywidgets",
    "k3d",
]

[tool.setuptools]
packages = [
    "gustaf",
    "gustaf.io",
    "gustaf.utils",
    "gustaf.create",
    "gustaf.helpers"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "gustaf._version.version"}

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "PL",          # pylint
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "NPY",         # numpy specific rules
  "I",           # isort specific rules
  "UP",          # pyupdate specific rules
  "C400","C401","C402","C403","C404","C405", # additional pyupgrade rules
  "FURB",        # refurb items
  "YTT",         # flake8 check version comparison mistakes
  "A",           # flake8-builtins
]
fixable = ["ALL"]
ignore = [
    "PLR2004", # TODO!
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "PLC0415", # Non top-level import
    "B904", # Within an `except` clause, raise exceptions with ...
]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["T201"]
"examples/*.py" = ["T201"]
"tests/*.py" = ["T201", "B018"]

[tool.codespell]
ignore-words-list = "connec"
skip="./docs/source/_generated/**,./docs/build/*,./build/*"
